--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="STAR-ECHO (Server That Are Running-Echo) - What is running? | Test">
+  <meta name="description" content="STAR-ECHO (Servers That Are Running-Echo) - What is running? | Test">
   <meta name="keywords" content="localhost,server,running,detection,sabnzbd,router,fritzbox,nzbget,xampp">
 
-  <title>STAR-ECHO (Server That Are Running-Echo) - What is running? | Test</title>
+  <title>STAR-ECHO (Servers That Are Running-Echo) - What is running? | Test</title>
 
 </head>
 
